# Poly-Oracle

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  test  test_agents.py  test_context.sh
.claude/: context.md
bot/: __init__.py  errors.py  startup.py
bot/config/: __init__.py  loader.py  schema.py  startup.json
bot/data/: __init__.py  feeds.py
bot/execution/: __init__.py
bot/monitoring/: __init__.py  logger.py
bot/risk/: __init__.py
bot/state/: __init__.py  store.py
bot/strategy/: __init__.py  coordinator.py
config/: settings.py
legacy/: README.md
legacy/phase1_snapshot/: MOVED_FILES.txt
legacy/src/: bot.py
src/agents/: __init__.py  base.py  bear.py  bull.py  devil.py  judge.py
src/calibration/: __init__.py  backtester.py  feedback.py  resolver.py
src/dashboard/: __init__.py  terminal.py  web.py
src/data/: context.py
src/execution/: __init__.py  live_executor.py  risk.py
src/models/: __init__.py  backtest.py  debate.py  forecast.py  news.py  trade.py
tests/: __init__.py  test_chroma_client.py  test_cli_smoke.py  test_config_validation.py  test_dashboard.py  test_executor.py  test_models.py  test_startup_pipeline.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_analyzer.py  test_base_agent.py  test_calibrator.py  test_context.py  test_crypto_selector.py  test_dashboard.py  test_feedback.py  test_models.py  test_news.py  test_polymarket.py  test_risk.py  test_settings.py  test_sizer.py  test_sqlite_client.py  test_viability_selector.py  test_web_dashboard.py
(+71 files in other folders)
