[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poly-oracle"
version = "1.0.0"
description = "Single-market BTC trading bot for Polymarket prediction markets"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "loguru",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "pyyaml",
    "rich",
    "py-clob-client",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[project.scripts]
poly-oracle = "cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
